package comportamental.br.edu.ifs.designpatterns.interpreter;

public abstract class Expressao {
    public abstract boolean interpretar();
}
