package comportamental.br.edu.ifs.designpatterns.interpreter;

public abstract class ExpressaoTerminal<G> extends Expressao{
    private G contexto;
}
